edits to WCVI chapter

--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -64,7 +64,7 @@ We recommend a step-wise approach for identifying LRPs, with the proportion of c
 
 The first step is to compile CU-level data to support biological status assessments as described under the WSP [@holtIndicatorsStatusBenchmarks2009; @holtEvaluatingBenchmarksBiological2018]. These data include (but are not limited to) time-series of spawner abundances, recruitment, hatchery contributions, productivity, and biological benchmarks on spawner abundances. This step generally includes aggregating data at the spawning site or stream level to the CU level. 
 
-In some cases, finer spatial scales than CU (e.g., watersheds or subpopulations within CUs) may be considered to define serious harm to an SMU. Although CUs are the population unit of assessment and conservation required under the WSP, the distribution of spawning within CUs (e.g., among watersheds or subpopulations) can be an important component of status [@holtIndicatorsStatusBenchmarks2009] and these finer scales can be considered when data or supporting information allows. Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution in units of subpopulations that are demographically independent, where population dynamics of one subpopulation is unlikely to affect the dynamics of another. Genetic exchange among subpopulations is expected to occur at greater rates than observed among CUs (or populations), and would likely exceed 10 effective migrants per generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined subpopulations on the basis of large watersheds or lakes, or partial barriers to migration. 
+In some cases, finer spatial scales than CU (e.g., watersheds or sub-populations within CUs) may be considered to define serious harm to an SMU. Although CUs are the population unit of assessment and conservation required under the WSP, the distribution of spawning within CUs (e.g., among watersheds or sub-populations) can be an important component of status [@holtIndicatorsStatusBenchmarks2009] and these finer scales can be considered when data or supporting information allows. Distribution is a commonly cited component of salmon viability and recovery [@mcelhanyViableSalmonidPopulations2010]. When applied to the identification of recovery targets for Pacific salmon, @bradfordReviewBiologicalPrinciples2004 defined the relevant scale of distribution in units of sub-populations that are demographically independent, where population dynamics of one sub-population is unlikely to affect the dynamics of another. Genetic exchange among sub-populations is expected to occur at greater rates than observed among CUs (or populations), and would likely exceed 10 effective migrants per generation. When applying these criteria to Interior Fraser River Coho salmon, @bradfordReviewBiologicalPrinciples2004 defined sub-populations on the basis of large watersheds or lakes, or partial barriers to migration. 
 
 We recommend that the decision on distribution and spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability [e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004; @mcelhanyViableSalmonidPopulations2010]. 
 
