changed Holt et al In review footnotes In press citation

--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -10,7 +10,7 @@ output:
 
 <!-- LW comment: there are 8 labeled inlets in Fig 22, but Esparanza and Nootka are grouped together in Table 6 and the text refers to 7 inlets. Why are Nootka and Esperanza grouped? -->
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of 3 CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionsentinelstockscommitteePacificSalmonCommission2018; @dfoReviewUpdateSouthern2013], 7 large inlets (or sounds), and 20 escapement indicators populations which have relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview)) [@riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production for many of these populations, where they help achieve harvest, conservation and assessment objectives. However, hatcheries are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in Holt et al. (in review), only escapement indicator populations without significant enhancement (i.e., populations with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included in this analysis. Although most fish in these populations are of natural origin (i.e., they spawned in the wild), 'wild' fish, defined in the WSP as second generation natural-origin fish, may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
+The West Coast of Vancouver Island (WCVI) Chinook SMU is comprised of three CUs [@holtbyConservationUnitsPacific2007; @pacificsalmoncommissionsentinelstockscommitteePacificSalmonCommission2018; @dfoReviewUpdateSouthern2013], seven large inlets (or sounds), and 20 escapement indicators populations which have relatively complete time-series and consistent observation methodology (Figure \@ref(fig:chinook-map), Table \@ref(tab:chinook-Overview)) [@riddellReview2001Chinook2002]. Hatcheries produce a relatively large component of the total production for many of these populations, where they help achieve harvest, conservation and assessment objectives. However, hatcheries are also considered a risk factor for the long-term sustainability of CUs because they can reduce wild genetic diversity and fitness [@withlerGeneticallyBasedTargets2018]. As described in @holtGuidelinesDefiningLimitInpress, only escapement indicator populations without significant enhancement (i.e., populations with Proportionate Natural Influence, PNI, values $\geqslant$ 0.5) were included in this analysis. Although most fish in these populations are of natural origin (i.e., they spawned in the wild), 'wild' fish, defined in the WSP as second generation natural-origin fish, may be in the minority [@withlerGeneticallyBasedTargets2018]. <!--CH: Chuck asked for pHOScensus values which would include out-of-basin strays. I don't have those data, but we could ask SEP/Area staff if necessary-->
 
 
 ```{r chinook-map, fig.cap="Map of the WCVI Chinook SMU, component CUs (coloured red, blue, and yellow), and inlets (labelled in black). Note, Designatable Units (DUs) defined by COSEWIC are aligned with CUs in this SMU.", warning=FALSE, echo=FALSE, fig.align="center"}
@@ -171,7 +171,7 @@ CH: my initial thinking would be remove time-periods where PNI is very high from
 <!--CH: Mention caveat about northern CU/inlet being DD possibly?-->
 
 
-Inlet status was derived by applying the multidimensional algorithm used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this algorithm was equivalent to status on a single metric, abundances relative to an estimated lower benchmark for all inlets. When abundances are only available on a relative scale and abundance benchmarks can be estimated, status within the multidimensional algorithm reduces to spawner abundances relative to abundance-based benchmarks  (as shown in Figure \@ref(fig:decision-tree)). Because the resulting LRPs were equivalent, in some cases we present only a single set of results, labeled as the single metric approach which also represents status based on the multidimensional algorithm in this case. Holt et al. (in review) recommend applying the multidimensional approach used in the Salmon Scanner to derive CU-level status.
+Inlet status was derived by applying the multidimensional algorithm used within the Pacific Salmon Status Scanner to individual inlets (Pestal et al., in prep). We found that the status using this algorithm was equivalent to status on a single metric, abundances relative to an estimated lower benchmark for all inlets. When abundances are only available on a relative scale and abundance benchmarks can be estimated, status within the multidimensional algorithm reduces to spawner abundances relative to abundance-based benchmarks  (as shown in Figure \@ref(fig:decision-tree)). Because the resulting LRPs were equivalent, in some cases we present only a single set of results, labeled as the single metric approach which also represents status based on the multidimensional algorithm in this case. @holtGuidelinesDefiningLimitInpress recommend applying the multidimensional approach used in the Salmon Scanner to derive CU-level status.
 
 S~gen~ is the spawner abundance required to achieve S~MSY~ within one generation without fishing under equilibrium conditions, and is the lower benchmark on abundances applied under the WSP. We derived S~gen~ by optimizing the Ricker equation with recruitment set to S~MSY~ (equation \@ref(eq:Sgen) repeated again here for transparency):
 
@@ -196,7 +196,7 @@ where, <!-- comma seems unnecessary here?-->
 
 and $a$ is recruits-per-spawner at low productivity and *W* represents a Lambert function [@scheuerellExplicitSolutionCalculating2016]. Maximum likelihood estimates of S~REP~ values (and 95% CIs) were derived from the watershed-area model adapted from @parkenHabitatbasedMethodsEstimate2006, that included hierarchical structure in the underlying meta-analysis accounting for similarities in productivity among ocean-type and stream-type fish [@liermannUsingAccessibleWatershed2010, Table \@ref(tab:chinook-benchmarks)]. 
 
-Ricker $a$ values were approximated from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion (W. Luedke pers. comm. DFO South Coast Stock Assessment). Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment . Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model and reported for many other ocean-type Chinook populations  [$>$ 7 recruits/spawner, @parkenHabitatbasedMethodsEstimate2006].  From the life-stage model, mean $a$ values were estimated at ~2.7 recruits-per-spawner, with standard errors ranging from 1.6 to 4.5). <!--CH note to remind myself: "We assumed these parameter distribution represented expected productivity, and so log-normal bias corrections were not applied."  -->
+Ricker $a$ values were approximated from a life-stage model that partitioned survival across freshwater and marine life-stages for ocean-type Chinook based on empirical data and expert opinion (W. Luedke pers. comm. DFO South Coast Stock Assessment). Life-stage specific survival rates were then combined to derive an overall survival from spawners to recruitment . Despite the relatively large uncertainties in the life-stage specific survival rates, this approach provides an approximation for productivity that is more realistic than the high estimate previously derived from the watershed-area model and reported for many other ocean-type Chinook populations  [$>$ 7 recruits/spawner, @parkenHabitatbasedMethodsEstimate2006].  From the life-stage model, mean $a$ values were estimated at 2.7 recruits-per-spawner, with standard errors ranging from 1.6 to 4.5). <!--CH note to remind myself: "We assumed these parameter distribution represented expected productivity, and so log-normal bias corrections were not applied."  -->
 
 
 
@@ -251,7 +251,7 @@ CU status was derived from the proportion of component inlets above their lower 
 
 ### Methods
 
-The LRP on the proportion of CUs was identified as all 3 CUs containing inlets with current statuses exclusively above Red status.  Because inlets are nested within CUs, this LRP accounts for the distribution of spawning among inlets within CUs. If any CU contained an inlet with Red status, the LRP was considered breached. Status of component inlets was derived from the multidimensional approach used within the Pacific Salmon Status Scanner, which for this SMU reduced to a single metric of spawner abundances relative to the lower benchmark, S~gen~. 
+The LRP on the proportion of CUs was identified as all three CUs containing inlets with current statuses exclusively above Red status.  Because inlets are nested within CUs, this LRP accounts for the distribution of spawning among inlets within CUs. If any CU contained an inlet with Red status, the LRP was considered breached. Status of component inlets was derived from the multidimensional approach used within the Pacific Salmon Status Scanner, which for this SMU reduced to a single metric of spawner abundances relative to the lower benchmark, S~gen~. 
 
 We further considered a CU status-based LRP based on CU statuses derived from a previously published WSP integrated assessment [status in 2014 only, @dfoIntegratedBiologicalStatus2016].
 
