--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -10,7 +10,7 @@ output:
 
 ## CONTEXT {#chum-context}
 
-The Inside South Coast Chum - Non-Fraser SMU (abbreviated as ISC Chum) includes 7 CUs of Chum Salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island (Figure \@ref(fig:chum-map); @holtbyConservationUnitsPacific2007). This area includes deep fjords, glaciers, large rivers, and small coastal streams. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. 
+The Inside South Coast Chum - Non-Fraser SMU (abbreviated as ISC Chum) includes seven CUs of Chum Salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island (Figure \@ref(fig:chum-map); @holtbyConservationUnitsPacific2007). This area includes deep fjords, glaciers, large rivers, and small coastal streams. Chum salmon CUs spawning in the Fraser River watershed are not included in this SMU. They have been categorized as a separate 'Inside South Coast Chum - Fraser' SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. 
 
 ```{r chum-map, fig.cap="The seven Conservation Units that make up the Inside South Coast Chum Stock Management Unit (not including Lower Fraser and Fraser Canyon Conservation Units).", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/chum-map.png")
@@ -20,7 +20,7 @@ knitr::include_graphics("figure/chum-map.png")
 The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival [although there are some scale/growth data in @debertinMarineGrowthPatterns2017]. Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004 identified long-term increases or variable abundance in Georgia Strait and Howe Sound-Burrard Inlet and declines in Northeast Vancouver Island and especially in the Southern Coastal Streams CU (from 1953-2002). @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed WSP status assessment has not been developed for ISC chum.
 
 
-Holt et al. (in review) provide steps for applying LRPs to salmon SMUs, one of which is to identify if the status of data-deficient CUs can be represented by other data-rich CUs. This is relevant for the ISC Chum case study because two CUs have no observations in some years (Upper Knight and Bute Inlet). To infer status of data-deficient CUs from data-rich CUs, Holt et al. (in review) recommend providing evidence for similar threats, environmental drivers, biological characteristics, and population capacity among CUs.
+@holtGuidelinesDefiningLimitInpress provide steps for applying LRPs to salmon SMUs, one of which is to identify if the status of data-deficient CUs can be represented by other data-rich CUs. This is relevant for the ISC Chum case study because two CUs have no observations in some years (Upper Knight and Bute Inlet). To infer status of data-deficient CUs from data-rich CUs, @holtGuidelinesDefiningLimitInpress recommend providing evidence for similar threats, environmental drivers, biological characteristics, and population capacity among CUs.
 
 
 Upper Knight and Bute Inlet CUs are both associated with long fjords that run from the Broughton Archipelago through the Coast Mountains. They include rivers with headwaters in the Cariboo region farther inland than other CUs in the SMU (Figure \@ref(fig:chum-map)). Southern Coastal Streams, Georgia Strait, and Howe Sound-Burrard Inlet also include portions of the Coast Mountains and some glaciers, but to a lesser extent and their inlets are shorter and their watersheds do not go as far inland. Upper Knight and Bute Inlet are unique in that they are the only CUs in the SMU that only include watersheds that drain into the upper end of long inlets. They are both more remote than the other CUs, which is partly why there are fewer observations over time for Chum with fall run timing.
@@ -91,7 +91,7 @@ For this case study, we consider two approaches for characterizing CU status:
 LW: The Scanner as we used it also has the absolute benchmark of 1500 / 10,000 fish. Although the percentile status can be calculated within the Salmon Scanner, the point in the paper is to compare the scanner with a simpler approach that won't be new for people. The Scanner uses additional metrics/benchmarks (e.g., absolute spawners against 1500/10,000), and this comparison of percentile approach vs Scanner shows how sensitive LRPs and assessments against LRP are to the additional metrics in the Scanner. -->
 
 
-The first approach is consistent with Canada's WSP and is recommended by Holt et al. (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the CU status-based LRP approach. The second approach is presented for comparison with the multidimensional approach.<!--SG: Again, it isn’t really a separate approach.  The Scanner does both. You are just doing what we would recommend in an expert driven process. Look at the integrated status produced by the algorithm, and results for individual metrics, time series, etc. Our work has landed on the algorithm we have as the best way. LW: See above comment. -->
+The first approach is consistent with Canada's WSP and is recommended by @holtGuidelinesDefiningLimitInpress<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the CU status-based LRP approach. The second approach is presented for comparison with the multidimensional approach.<!--SG: Again, it isn’t really a separate approach.  The Scanner does both. You are just doing what we would recommend in an expert driven process. Look at the integrated status produced by the algorithm, and results for individual metrics, time series, etc. Our work has landed on the algorithm we have as the best way. LW: See above comment. -->
 
 
 When applying the multidimensional algorithm used within the Salmon Scanner to ISC Chum, we used percentile benchmarks when they were available for a CU. For CUs in which percentile benchmarks were not appropriate, the multidimensional algorithm used trends in spawner abundance as a basis for assessing CU status (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend at least partially on percentile benchmarks.
@@ -208,7 +208,7 @@ In supplementary analyses, we evaluated percentile benchmarks retrospectively fo
 
 ### Methods
 
-We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile benchmarks. While we initially considered logistic regression LRPs that used S~gen~ as a lower CU benchmark instead of percentiles, we decided to drop this approach due to unreliable  stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt et al. (in review). These methods used four CUs with over 50 years of data and appropriate percentile benchmarks (North East Vancouver Island, Loughborough, Georgia Strait, and Howe Sound-Burrard Inlet). Aggregate abundance (predictor variable) was calculated using only these four CUs. We omitted Bute Inlet and Upper Knight (both had CU-level infilling in recent years) and Southern Coastal Streams (no appropriate percentile benchmark). Refer to Section \@ref(MethodsChapter) for more details. 
+We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile benchmarks. While we initially considered logistic regression LRPs that used S~gen~ as a lower CU benchmark instead of percentiles, we decided to drop this approach due to unreliable  stock-recruit data. Using recruitment data would not satisfy reliability principles in @holtGuidelinesDefiningLimitInpress. These methods used four CUs with over 50 years of data and appropriate percentile benchmarks (North East Vancouver Island, Loughborough, Georgia Strait, and Howe Sound-Burrard Inlet). Aggregate abundance (predictor variable) was calculated using only these four CUs. We omitted Bute Inlet and Upper Knight (both had CU-level infilling in recent years) and Southern Coastal Streams (no appropriate percentile benchmark). Refer to Section \@ref(MethodsChapter) for more details. 
 
 
 Due to poor logistic model fits using the entire 1953-2018 time series, we did not conduct retrospective analyses of logistic regression LRPs for this SMU as was done for the Interior Fraser River Coho case study. The characteristics of the data that led to poor logistic model fits are highlighted in the results section below. 
