changed numbers to words, in some cases

--- a/guidelinesWP/10-appendixCaseStudies.Rmd
+++ b/guidelinesWP/10-appendixCaseStudies.Rmd
@@ -55,7 +55,7 @@ For this case study, we further demonstrated the approach of averaging over stru
 ## WEST COAST VANCOUVER ISLAND CHINOOK
 
 
-The WCVI Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator populations distributed across the 7 inlets and 3 CUs. Escapement indicator populations are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionsentinelstockscommitteePacificSalmonCommission2018]. Hatchery enhancement is a substantial component of many of these populations<!--LW: changed from stocks-->, however, only escapement indicator populations without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses (see Section \@ref(est-methods)).  Because time-series of the proportion of hatchery-origin spawners are not available for these populations<!--LW: changed from stocks-->, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may result in overly optimistic assessments of status relative to analyses excluding hatchery-origin fish (as in the Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets within the SMU, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
+The WCVI Chinook SMU consists of three CUs [@holtbyConservationUnitsPacific2007], seven large inlets (or sounds), and 20 escapement indicator populations distributed across the seven inlets and three CUs. Escapement indicator populations are those with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionsentinelstockscommitteePacificSalmonCommission2018]. Hatchery enhancement is a substantial component of many of these populations<!--LW: changed from stocks-->, however, only escapement indicator populations without significant hatchery enhancement (PNI $\geqslant$ 0.5) were included in our analyses (see Section \@ref(est-methods)).  Because time-series of the proportion of hatchery-origin spawners are not available for these populations<!--LW: changed from stocks-->, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may result in overly optimistic assessments of status relative to analyses excluding hatchery-origin fish (as in the Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets within the SMU, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
 
 
 For WCVI Chinook, inlets nested within CUs are considered an important spatial scale of biodiversity given the geographic separation of spawning habitats among inlets, and limited straying observed among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We therefore considered spawner abundances at the scale of inlets within CUs because of expected limited demographic exchange at this spatial scale.
