--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -49,7 +49,7 @@ Table: (\#tab:cohoCU2SP) Interior Fraser Coho Conservation Units (CUs) and assoc
 
 Hatchery enhancement has occurred, and continues to occur in some parts of the Interior Fraser Coho SMU. Two CUs are currently considered wild populations based on the criteria developed by @withlerGeneticallyBasedTargets2018 (i.e., do not have hatchery programs; strays from out-of-basin hatchery production are limited to <3% per year), while the other three are considered integrated-wild populations (i.e., with Proportionate Natural Influence (PNI) values most likely $\geq$ 0.72; M. Arbeider, pers. comm.). Within integrated-wild populations, most fish are considered 'wild' under the WSP with parents who were born in the natural environment. The Lower Thompson CU had higher levels of hatchery enhancement between 1998 and 2005, so would likely have been considered an integrated-transition population (0.5 $\leq$ PNI < 0.72) during this period.
 
-The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUs of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by Holt et al. (in review) to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
+The five Interior Fraser Coho CUs have historically shown relatively high levels of covariation in escapement among CUs, with an average correlation in spawner abundances among CUs of 0.56. Similarity among CU responses to environmental and anthropogenic drivers is further supported by application of the four criteria proposed by @holtGuidelinesDefiningLimitInpress to evaluate the extent to which status of data deficient CUs can be inferred from CUs with data. A summary of our consideration of these criteria for Interior Fraser Coho are provided in Appendix \@ref(app:coho-appendix). Results showed that Interior Fraser Coho CUs have many shared characteristics. We found few significant indicators that would have prevented us from inferring CU status for one CU from neighboring CUs prior to our case study analyses.
 
 Interior Fraser Coho is included in the first batch of major stocks proposed for regulation under the Fish Stocks provisions of the revised *Fisheries Act*, necessitating the development of LRPs for this SMU.
 <!--KH: I have included this here to be consistent with WCVI chinook, but we should confirm at some point that this is publishable. Hopefully by the time this paper is published, batch 1 stocks will be prescribed .... -->
@@ -86,7 +86,7 @@ The exploitation rate time series is a large source of uncertainty for Interior 
 
 We use three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho: 1) multidimensional status estimates derived from the Pacific Salmon Status Scanner, 2) CU-level abundance relative to S~gen~ as a lower benchmark on abundance, and 3) Distribution of spawning abundance relative to distributional targets developed by the IFCRT. 
 
-The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by Holt et al. (in review) as the method that should be used to estimate CU status for CU status-based reference points when a recent WSP status assessment is not available. The other two approaches are primarily used to develop aggregate abundance LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
+The first approach, which uses the Salmon Scanner tool developed by the State of the Salmon program (Section \@ref(rapidToolMethods)), is consistent with Canada's WSP and is recommended by @holtGuidelinesDefiningLimitInpress as the method that should be used to estimate CU status for CU status-based reference points when a recent WSP status assessment is not available. The other two approaches are primarily used to develop aggregate abundance LRPs in this case study, as well as for a point of comparison with the Salmon Scanner tool.
 
 
 The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of S~gen~, where CU status is considered Red when abundance drops below S~gen~. The value of S~gen~ represents the number of spawners required to recover to S~MSY~ (spawners at maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holtIndicatorsStatusBenchmarks2009]. S~gen~ is one of several benchmarks available for assigning multidimensional CU status in WSP Integrated Status Assessments and the Salmon Scanner; it represents a lower benchmark between Red and Amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015]. While estimates of CU status relative to S~gen~ is a readily available output from the Salmon Scanner tool, we calculated this metric external to the tool for our case study. 
@@ -376,7 +376,7 @@ knitr::include_graphics("figure/coho_LRP_compareRetro.png")
 \
 &nbsp;
 
-When the Logistic:Sgen-Ricker model was applied retrospectively to missing data scenarios with 4 out of the 5 CUs, only a subset of scenarios had LRP estimates that converged on a solution (Figure \@ref(fig:coho-IM-missingCUs)). All 5 possible combinations of 4 CUs had estimates in 2017-2019, while only 4 combinations had estimates in 2020. For scenarios in which LRP estimates were possible, estimates of aggregate status (Equation \@ref(eq:status)) were often close to the estimate obtained when all 5 CUs were used, and always overlapped with the 95% confidence interval of the full data estimate. The Logistic:Sgen-Ricker model was less likely to converge on a solution when data from only three CUs were used. This pattern was especially true for 2020 when only 6 out of the 10 possible combinations had estimates. For scenarios that were able to converge, aggregate status estimates from 3 CUs tended to be more uncertain than 4- and 5-CU estimates, and showed larger deviations from estimated status when all CUs were used. One missing data scenario in 2019 had a status estimate that fell outside of the 95% confidence interval of the full data estimate.  
+When the Logistic:Sgen-Ricker model was applied retrospectively to missing data scenarios with 4 out of the 5 CUs, only a subset of scenarios had LRP estimates that converged on a solution (Figure \@ref(fig:coho-IM-missingCUs)). All 5 possible combinations of 4 CUs had estimates in 2017-2019, while only 4 combinations had estimates in 2020. For scenarios in which LRP estimates were possible, estimates of aggregate status (Equation \@ref(eq:status)) were often close to the estimate obtained when all 5 CUs were used, and always overlapped with the 95% confidence interval of the full data estimate. The Logistic:Sgen-Ricker model was less likely to converge on a solution when data from only three CUs were used. This pattern was especially true for 2020 when only 6 out of the 10 possible combinations had estimates. For scenarios that were able to converge, aggregate status estimates from three CUs tended to be more uncertain than 4- and 5-CU estimates, and showed larger deviations from estimated status when all CUs were used. One missing data scenario in 2019 had a status estimate that fell outside of the 95% confidence interval of the full data estimate.  
 
 
 ```{r coho-IM-missingCUs, fig.cap="Estimates of SMU status (with 95\\% confidence intervals) from the Logistic:Sgen-Ricker model under different scenarios about missing CUs, where aggregate status is characterized as the recent generational mean of aggregate abundance / LRP. LRPs are based on a 50\\% probability that all CUs will be above their lower benchmarks. The set of status estimates associated with each number of CUs on the x-axis represents all possible combinations of CUs created by selecting that number from the 5 available CUs.  Red dashed lines show the maximum likelihood estimate when no data is missing (i.e., all 5 CUs) for comparison with the missing data scenarios. Note that the y-axis has been truncated at 6, so the upper limits of some error bars are not shown.", warning=FALSE, echo=FALSE, out.width = '70%', fig.align="center"}
@@ -576,7 +576,7 @@ knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 ```
 
 
-We show historical results for three types of CU status-based LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > Red (e.g., CUbased: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., CUbased: Sgen-Ricker), and using the IFCRT distributional target status (CUbased: IFCRT) . Holt et al. (in review) recommend CU statuses be derived from the multidimensional approach used within the Salmon Scanner; however, we show results for the single metric S~gen~ and IFCRT approaches to demonstrate how these approaches impact SMU status. This comparison is of interest because our aggregate abundance LRPs use status estimates based on a single metric rather than a multidimensional approach.   
+We show historical results for three types of CU status-based LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > Red (e.g., CUbased: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., CUbased: Sgen-Ricker), and using the IFCRT distributional target status (CUbased: IFCRT). @holtGuidelinesDefiningLimitInpress recommend CU statuses be derived from the multidimensional approach used within the Salmon Scanner; however, we show results for the single metric S~gen~ and IFCRT approaches to demonstrate how these approaches impact SMU status. This comparison is of interest because our aggregate abundance LRPs use status estimates based on a single metric rather than a multidimensional approach.   
 
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a CU status-based LRP. We label this case "CUbased : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as Amber or Amber/Green.  
